main/default/objects/pharos__Action__c/pharos__Action__c.object-meta.xml
<CustomObject>
    <label>Action</label>
    <nameField>
        <displayFormat>A-{0000000}</displayFormat>
        <label>Action Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>