main/default/objects/pharos__Action__c/fields/pharos__Additional_Metadata__c.field-meta.xml
<CustomField>
    <fullName>pharos__Additional_Metadata__c</fullName>
    <label>Additional Metadata</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>