main/default/objects/pharos__Action__c/fields/pharos__Body__c.field-meta.xml
<CustomField>
    <fullName>pharos__Body__c</fullName>
    <label>Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>