main/default/objects/pharos__Action__c/fields/pharos__Contact__c.field-meta.xml
<CustomField>
    <fullName>pharos__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Actions</relationshipLabel>
    <relationshipName>Actions</relationshipName>
    <type>Lookup</type>
</CustomField>