main/default/objects/pharos__Action__c/fields/pharos__CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>pharos__CreatedDate__c</fullName>
    <label>Created Date</label>
    <type>DateTime</type>
</CustomField>