main/default/objects/pharos__Action__c/fields/pharos__Description__c.field-meta.xml
<CustomField>
    <fullName>pharos__Description__c</fullName>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>