main/default/objects/pharos__Action__c/fields/pharos__EmailBody__c.field-meta.xml
<CustomField>
    <fullName>pharos__EmailBody__c</fullName>
    <label>Email Body</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>