main/default/objects/pharos__Action__c/fields/pharos__EmailCC__c.field-meta.xml
<CustomField>
    <fullName>pharos__EmailCC__c</fullName>
    <label>Email CC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>