main/default/objects/pharos__Action__c/fields/pharos__EmailTemplateId__c.field-meta.xml
<CustomField>
    <fullName>pharos__EmailTemplateId__c</fullName>
    <label>Email Template Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>