main/default/objects/pharos__Action__c/fields/pharos__EmailTo__c.field-meta.xml
<CustomField>
    <fullName>pharos__EmailTo__c</fullName>
    <label>Email To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>