main/default/objects/pharos__Action__c/fields/pharos__Is_Update__c.field-meta.xml
<CustomField>
    <fullName>pharos__Is_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Update</label>
    <type>Checkbox</type>
</CustomField>