main/default/objects/pharos__Action__c/fields/pharos__JIRAAssignee__c.field-meta.xml
<CustomField>
    <fullName>pharos__JIRAAssignee__c</fullName>
    <label>JIRA Assignee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>