main/default/objects/pharos__Action__c/fields/pharos__JIRAAssignee_Id__c.field-meta.xml
<CustomField>
    <fullName>pharos__JIRAAssignee_Id__c</fullName>
    <label>JIRAAssignee Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>