main/default/objects/pharos__Action__c/fields/pharos__JIRAComponents__c.field-meta.xml
<CustomField>
    <fullName>pharos__JIRAComponents__c</fullName>
    <label>JIRA Components</label>
    <length>255</length>
    <type>Text</type>
</CustomField>