main/default/objects/pharos__Action__c/fields/pharos__JIRAEpic__c.field-meta.xml
<CustomField>
    <fullName>pharos__JIRAEpic__c</fullName>
    <label>JIRA Epic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>