main/default/objects/pharos__Action__c/fields/pharos__JIRAIssueType__c.field-meta.xml
<CustomField>
    <fullName>pharos__JIRAIssueType__c</fullName>
    <label>JIRA Issue Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>