main/default/objects/pharos__Action__c/fields/pharos__JIRALabels__c.field-meta.xml
<CustomField>
    <fullName>pharos__JIRALabels__c</fullName>
    <label>JIRA Labels</label>
    <length>255</length>
    <type>Text</type>
</CustomField>