main/default/objects/pharos__Action__c/fields/pharos__JIRAPriority__c.field-meta.xml
<CustomField>
    <fullName>pharos__JIRAPriority__c</fullName>
    <label>JIRA Priority</label>
    <length>255</length>
    <type>Text</type>
</CustomField>