main/default/objects/pharos__Action__c/fields/pharos__JIRAProject__c.field-meta.xml
<CustomField>
    <fullName>pharos__JIRAProject__c</fullName>
    <label>JIRA Project</label>
    <length>255</length>
    <type>Text</type>
</CustomField>