main/default/objects/pharos__Action__c/fields/pharos__SlackChannels__c.field-meta.xml
<CustomField>
    <fullName>pharos__SlackChannels__c</fullName>
    <label>Slack Channels</label>
    <length>255</length>
    <type>Text</type>
</CustomField>