main/default/objects/pharos__Action__c/fields/pharos__Subject__c.field-meta.xml
<CustomField>
    <fullName>pharos__Subject__c</fullName>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>