main/default/objects/pharos__Action__c/fields/pharos__Subtype__c.field-meta.xml
<CustomField>
    <fullName>pharos__Subtype__c</fullName>
    <label>Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
            </value>
            <value>
                <fullName>Notification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>