main/default/objects/pharos__Action__c/fields/pharos__Team_Id__c.field-meta.xml
<CustomField>
    <fullName>pharos__Team_Id__c</fullName>
    <label>Team Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>