main/default/objects/pharos__Action__c/fields/pharos__Type__c.field-meta.xml
<CustomField>
    <fullName>pharos__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>pharos__Action_Type</valueSetName>
    </valueSet>
</CustomField>