main/default/objects/pharos__Action__c/recordTypes/pharos__Archival.recordType-meta.xml
<RecordType>
    <fullName>pharos__Archival</fullName>
    <active>true</active>
    <label>Archival</label>
</RecordType>