main/default/objects/pharos__Action__c/recordTypes/pharos__Monitoring.recordType-meta.xml
<RecordType>
    <fullName>pharos__Monitoring</fullName>
    <active>true</active>
    <label>Monitoring</label>
</RecordType>