main/default/objects/pharos__Action__c/listViews/pharos__All.listView-meta.xml
<ListView>
    <fullName>pharos__All</fullName>
    <columns>NAME</columns>
    <columns>pharos__Type__c</columns>
    <columns>pharos__Subtype__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>